--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-three/postprocessing": "^2.16.3",
     "@react-three/rapier": "^1.5.0",
     "react": "^18.3.1",
+    "react-compiler-runtime": "19.0.0-beta-63b359f-20241101",
     "react-dom": "^18.3.1",
     "react-error-boundary": "^4.1.2",
     "three": "^0.170.0"
@@ -23,12 +24,15 @@
     "@eslint/compat": "^1.2.2",
     "@eslint/js": "^9.14.0",
     "@rsbuild/core": "^1.1.0",
+    "@rsbuild/plugin-babel": "^1.0.3",
     "@rsbuild/plugin-react": "^1.0.7",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@types/three": "^0.169.0",
+    "babel-plugin-react-compiler": "0.0.0-experimental-19cbb8f-20241107",
     "eslint": "^9.14.0",
     "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-compiler": "0.0.0-experimental-19cbb8f-20241107",
     "eslint-plugin-react-hooks": "^5.0.0",
     "globals": "^15.12.0",
     "prettier": "^3.3.3",
