--- a/package.json
+++ b/package.json
@@ -29,10 +29,10 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@types/three": "^0.169.0",
-    "babel-plugin-react-compiler": "0.0.0-experimental-19cbb8f-20241107",
+    "babel-plugin-react-compiler": "19.0.0-beta-63b359f-20241101",
     "eslint": "^9.14.0",
     "eslint-plugin-react": "^7.37.2",
-    "eslint-plugin-react-compiler": "0.0.0-experimental-19cbb8f-20241107",
+    "eslint-plugin-react-compiler": "19.0.0-beta-63b359f-20241101",
     "eslint-plugin-react-hooks": "^5.0.0",
     "globals": "^15.12.0",
     "prettier": "^3.3.3",
