--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
     "@react-three/fiber": "^8.17.10",
     "@react-three/postprocessing": "^2.16.3",
     "@react-three/rapier": "^1.5.0",
+    "@xstate/graph": "^2.0.1",
+    "@xstate/react": "^4.1.3",
+    "@xstate/store": "^2.6.0",
     "react": "^18.3.1",
     "react-compiler-runtime": "19.0.0-beta-63b359f-20241101",
     "react-dom": "^18.3.1",
     "react-error-boundary": "^4.1.2",
-    "three": "^0.170.0"
+    "three": "^0.170.0",
+    "xstate": "^5.18.2"
   },
   "devDependencies": {
     "@eslint/compat": "^1.2.2",
@@ -36,6 +40,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "globals": "^15.12.0",
     "prettier": "^3.3.3",
+    "r3f-perf": "^7.2.3",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.13.0"
   }
