--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
+    "exactOptionalPropertyTypes": true,
 
     "esModuleInterop": true,
     "types": ["three", "@react-three/fiber"]
