--- a/package.json
+++ b/package.json
@@ -7,22 +7,24 @@
     "dev": "rsbuild dev --open",
     "format": "prettier --write .",
     "lint": "eslint .",
-    "preview": "rsbuild preview"
+    "preview": "rsbuild preview",
+    "update-deps-ncu": "pnpm dlx npm-check-updates",
+    "update-deps": "pnpm dlx npm-check -u"
   },
   "dependencies": {
-    "@react-three/drei": "^9.115.0",
+    "@react-three/drei": "^9.116.0",
     "@react-three/fiber": "^8.17.10",
     "@react-three/postprocessing": "^2.16.3",
     "@react-three/rapier": "^1.5.0",
-    "@xstate/graph": "^2.0.1",
-    "@xstate/react": "^4.1.3",
-    "@xstate/store": "^2.6.0",
+    "@xstate/graph": "^3.0.0",
+    "@xstate/react": "^5.0.0",
+    "@xstate/store": "^2.6.1",
     "react": "^18.3.1",
     "react-compiler-runtime": "19.0.0-beta-63b359f-20241101",
     "react-dom": "^18.3.1",
     "react-error-boundary": "^4.1.2",
     "three": "^0.170.0",
-    "xstate": "^5.18.2"
+    "xstate": "^5.19.0"
   },
   "devDependencies": {
     "@eslint/compat": "^1.2.2",
