--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@xstate/graph": "^3.0.0",
     "@xstate/react": "^5.0.0",
     "@xstate/store": "^2.6.1",
+    "leva": "^0.9.35",
     "react": "^18.3.1",
     "react-compiler-runtime": "19.0.0-beta-63b359f-20241101",
     "react-dom": "^18.3.1",
