--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "react-compiler-runtime": "19.0.0-beta-63b359f-20241101",
     "react-dom": "^18.3.1",
     "react-error-boundary": "^4.1.2",
+    "react-router-dom": "^6.28.0",
     "three": "^0.170.0",
+    "tiny-invariant": "^1.3.3",
     "xstate": "^5.19.0"
   },
   "devDependencies": {
