--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "@xstate/graph": "^3.0.0",
     "@xstate/react": "^5.0.0",
     "@xstate/store": "^2.6.1",
-    "howler": "^2.2.4",
     "leva": "^0.9.35",
     "react": "^18.3.1",
     "react-compiler-runtime": "19.0.0-beta-63b359f-20241101",
@@ -29,6 +28,7 @@
     "react-router-dom": "^6.28.0",
     "three": "^0.170.0",
     "tiny-invariant": "^1.3.3",
+    "use-sound": "^4.0.3",
     "xstate": "^5.19.0"
   },
   "devDependencies": {
