--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "update-deps": "pnpm dlx npm-check -u"
   },
   "dependencies": {
+    "@electric-sql/pglite": "^0.2.14",
+    "@electric-sql/react": "^0.6.1",
     "@react-three/drei": "^9.116.0",
     "@react-three/fiber": "^8.17.10",
     "@react-three/postprocessing": "^2.16.3",
@@ -26,7 +28,7 @@
     "react-compiler-runtime": "19.0.0-beta-63b359f-20241101",
     "react-dom": "^18.3.1",
     "react-error-boundary": "^4.1.2",
-    "react-router-dom": "^6.28.0",
+    "react-router": "^7.0.2",
     "three": "^0.170.0",
     "tiny-invariant": "^1.3.3",
     "use-sound": "^4.0.3",
