--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "three": "^0.170.0",
     "tiny-invariant": "^1.3.3",
     "use-sound": "^4.0.3",
-    "xstate": "^5.19.0"
+    "xstate": "^5.19.0",
+    "r3f-perf": "^7.2.3"
   },
   "devDependencies": {
     "@eslint/compat": "^1.2.2",
@@ -50,7 +51,6 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "globals": "^15.12.0",
     "prettier": "^3.3.3",
-    "r3f-perf": "^7.2.3",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.13.0"
   }
