feat(upgrade): upgrade deps so we can work

--- a/package.json
+++ b/package.json
@@ -4,54 +4,56 @@
   "version": "1.0.0",
   "scripts": {
     "build": "rsbuild build",
-    "dev": "rsbuild dev --open",
+    "dev": "rsbuild dev",
+    "dev:open": "rsbuild dev --open",
     "format": "prettier --write .",
     "lint": "eslint .",
     "preview": "rsbuild preview",
-    "update-deps-ncu": "pnpm dlx npm-check-updates",
     "update-deps": "pnpm dlx npm-check -u"
   },
   "dependencies": {
-    "@electric-sql/pglite": "^0.2.14",
-    "@electric-sql/react": "^0.6.1",
-    "@react-three/drei": "^9.116.0",
-    "@react-three/fiber": "^8.17.10",
-    "@react-three/postprocessing": "^2.16.3",
-    "@react-three/rapier": "^1.5.0",
-    "@rive-app/react-canvas": "^4.16.6",
-    "@xstate/graph": "^3.0.0",
-    "@xstate/react": "^5.0.0",
-    "@xstate/store": "^2.6.1",
-    "leva": "^0.9.35",
-    "nuqs": "^2.2.3",
+    "@electric-sql/pglite": "^0.3.5",
+    "@electric-sql/react": "^1.0.7",
+    "@react-three/drei": "^10.6.1",
+    "@react-three/fiber": "^9.2.0",
+    "@react-three/postprocessing": "^3.0.4",
+    "@react-three/rapier": "^2.1.0",
+    "@rive-app/react-canvas": "^4.22.1",
+    "@xstate/graph": "^3.0.4",
+    "@xstate/react": "^6.0.0",
+    "@xstate/store": "^3.8.2",
+    "leva": "^0.10.0",
+    "nuqs": "^2.4.3",
+    "r3f-perf": "^7.2.3",
     "react": "^18.3.1",
     "react-compiler-runtime": "19.0.0-beta-63b359f-20241101",
     "react-dom": "^18.3.1",
-    "react-error-boundary": "^4.1.2",
-    "react-router": "^7.0.2",
+    "react-error-boundary": "^6.0.0",
+    "react-router": "^7.7.1",
     "three": "^0.170.0",
     "tiny-invariant": "^1.3.3",
-    "use-sound": "^4.0.3",
-    "xstate": "^5.19.0",
-    "r3f-perf": "^7.2.3"
+    "use-sound": "^5.0.0",
+    "xstate": "^5.20.1"
   },
   "devDependencies": {
-    "@eslint/compat": "^1.2.2",
-    "@eslint/js": "^9.14.0",
-    "@rsbuild/core": "^1.1.0",
-    "@rsbuild/plugin-babel": "^1.0.3",
-    "@rsbuild/plugin-react": "^1.0.7",
+    "@eslint/compat": "^1.3.1",
+    "@eslint/js": "^9.32.0",
+    "@rsbuild/core": "^1.4.11",
+    "@rsbuild/plugin-babel": "^1.0.5",
+    "@rsbuild/plugin-react": "^1.3.4",
+    "@tailwindcss/postcss": "^4.1.11",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
-    "@types/three": "^0.169.0",
+    "@types/three": "^0.178.1",
     "babel-plugin-react-compiler": "19.0.0-beta-63b359f-20241101",
-    "eslint": "^9.14.0",
-    "eslint-plugin-react": "^7.37.2",
+    "eslint": "^9.32.0",
+    "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-compiler": "19.0.0-beta-63b359f-20241101",
-    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "globals": "^15.12.0",
-    "prettier": "^3.3.3",
-    "typescript": "^5.6.3",
-    "typescript-eslint": "^8.13.0"
+    "prettier": "^3.6.2",
+    "tailwindcss": "^4.1.11",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.38.0"
   }
 }
