--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "format": "prettier --write .",
     "lint": "eslint .",
     "preview": "rsbuild preview",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest run --coverage",
     "update-deps": "pnpm dlx npm-check -u"
   },
   "dependencies": {
@@ -22,14 +25,20 @@
     "@xstate/graph": "^3.0.4",
     "@xstate/react": "^6.0.0",
     "@xstate/store": "^3.8.2",
+    "better-sqlite3": "^12.2.0",
+    "dotenv": "^17.2.1",
+    "drizzle-kit": "^0.31.4",
+    "drizzle-orm": "^0.44.3",
     "leva": "^0.10.0",
+    "miniplex": "^2.0.0",
     "nuqs": "^2.4.3",
     "r3f-perf": "^7.2.3",
-    "react": "^18.3.1",
+    "react": "^19.1.0",
     "react-compiler-runtime": "19.0.0-beta-63b359f-20241101",
-    "react-dom": "^18.3.1",
+    "react-dom": "^19.1.0",
     "react-error-boundary": "^6.0.0",
     "react-router": "^7.7.1",
+    "tailwindcss-animate": "^1.0.7",
     "three": "^0.170.0",
     "tiny-invariant": "^1.3.3",
     "use-sound": "^5.0.0",
@@ -42,18 +51,27 @@
     "@rsbuild/plugin-babel": "^1.0.5",
     "@rsbuild/plugin-react": "^1.3.4",
     "@tailwindcss/postcss": "^4.1.11",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
+    "@testing-library/jest-dom": "^6.4.0",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.5.0",
+    "@types/better-sqlite3": "^7.6.13",
+    "@types/node": "^24.1.0",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
     "@types/three": "^0.178.1",
+    "@vitest/coverage-v8": "^3.2.4",
+    "@vitest/ui": "^3.2.4",
     "babel-plugin-react-compiler": "19.0.0-beta-63b359f-20241101",
     "eslint": "^9.32.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-compiler": "19.0.0-beta-63b359f-20241101",
     "eslint-plugin-react-hooks": "^5.2.0",
-    "globals": "^15.12.0",
+    "globals": "^16.3.0",
+    "jsdom": "^26.1.0",
     "prettier": "^3.6.2",
     "tailwindcss": "^4.1.11",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.38.0"
+    "typescript-eslint": "^8.38.0",
+    "vitest": "^3.2.4"
   }
 }
