--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "compilerOptions": {
     "baseUrl": "./src",
-    "lib": ["DOM", "ES2020"],
+    "lib": ["DOM", "ES2022", "esnext.asynciterable"],
     "jsx": "react-jsx",
-    "target": "ES2020",
+    "target": "ES2022",
     "noEmit": true,
     "skipLibCheck": true,
     "useDefineForClassFields": true,
@@ -22,7 +22,15 @@
     "exactOptionalPropertyTypes": true,
 
     "esModuleInterop": true,
-    "types": ["three", "@types/three", "@react-three/fiber"]
+    "types": [
+      "three",
+      "@types/three",
+      "@react-three/fiber",
+      "node",
+      "@types/node"
+    ]
+    // "typeRoots": ["node_modules/@types"]
   },
-  "include": ["src"]
+  "include": ["src"],
+  "exclude": ["node_modules", "tmp"]
 }
